--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class = "column">
                 <div class = "row">
                     <div class = "column">
-                        <img class = "image" src="img/1.jpg"/>
+                        <img class = "image" src="/img/1.jpg"/>
                     </div>
                     <div class = "column">
                         <h3 class = "building-name">
