--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<script defer src="/script.js"></script>
+<script defer src="script.js"></script>
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <!--Css reset-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
@@ -28,7 +28,7 @@
             <div class = "column">
                 <div class = "row">
                     <div class = "column">
-                        <img class = "image" src="/img/1.jpg"/>
+                        <img class = "image" src="img/1.jpg"/>
                     </div>
                     <div class = "column">
                         <h3 class = "building-name">
